Bug 246117 - when deleting folder with many playlists, a delete confirmation is requested on EACH file
Summary: when deleting folder with many playlists, a delete confirmation is requested ...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Saved Playlists (other bugs)
Version First Reported In: 2.3.1-GIT
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 06:24 UTC by spam4romech
Modified: 2011-03-10 11:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description spam4romech 2010-07-29 06:24:52 UTC
Version:           2.3-GIT (using KDE 4.4.92) 
OS:                Linux

1. created a playlist folder
2. drag'n'dropped all my playlists there
3. discovered that they get duplicated (and not moved as I would expect)
4. so want to delete new folder-> now must confirm OR canced on EACH entry in playlist folder before you can continue. Very annoying if you have some thouthands of playlists. 

Reproducible: Didn't try

Steps to Reproduce:
see details

Actual Results:  
have to cancel deleting on each item in the folder being deleted 

Expected Results:  
confirm/cancel deleting on folder only once

OS: Linux (i686) release 2.6.32-18-generic
Compiler: cc
Comment 1 Myriam Schweingruber 2010-07-29 18:26:44 UTC
Using latest Amarok 2.3.1-git, KDE 4.4.92 on Kubuntu 10.04

Just to set this right: one can only move the playlists in the database, not the local playlists on disk.
But indeed, when trying to delete a folder it asks confirmation for each added playlists. I don't get any duplicate playlists, though. Did you mean duplicate tracks? That would be bug 227474. Please only report one item per bug.
Comment 2 James Duncan 2010-09-10 10:09:46 UTC
This doesn't have to do with folders, but I think the problem is related, so I'll add it here.  When selecting multiple playlists and then right-clicking and selecting 'Delete', a dialog comes up asking if you want to delete X many playlists.  If you press the DEL key (on the keyboard) instead, rather than that one box asking if you want to delete X many playlists, you get X delete confirmations.
Comment 3 Bart Cerneels 2011-03-10 11:54:34 UTC
Git commit caa0eba88e723ab52215f421b3f9ecac246720c4 by Bart Cerneels.
Committed on 10/03/2011 at 10:25.
Pushed by shanachie into branch 'master'.

Ask delete confirmation for all contents of folder.

BUG:246117

M  +2    -0    ChangeLog     
M  +17   -1    src/browsers/playlistbrowser/PlaylistsInFoldersProxy.cpp     
M  +15   -4    src/browsers/playlistbrowser/QtGroupingProxy.cpp     
M  +15   -15   src/playlistmanager/file/PlaylistFileProvider.cpp     
M  +22   -18   src/playlistmanager/sql/SqlUserPlaylistProvider.cpp     

http://commits.kde.org/amarok/caa0eba88e723ab52215f421b3f9ecac246720c4