Ask delete confirmation for all contents of folder.

BUG:246117